js/src/tests/test262/built-ins/NativeErrors/TypeError/is-error-object.js
assert
.
sameValue
(
Object
.
prototype
.
toString
.
call
(
new
TypeError
)
"
[
object
Error
]
"
)
;
reportCompare
(
0
0
)
;
